--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Find Pets</title>
   </head>
-  <body>
+  <body style='background-color:#42A5F5'>
     <div id="app"></div>
     <script src="bundle.js"></script>
 </html>
